fix: fix only show search input on Home page with pizza list, hide search on Cart page, style: fix header cart positioning with grid when not showing search in header

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -31,7 +31,7 @@
   h1 {
     // color: #181818;
     color: $black;
-    font-size: 1.5rem; // 24px
+    font-size: 24px; // 1.5rem
     letter-spacing: 1px;
     text-transform: uppercase;
     font-weight: 800;
@@ -46,14 +46,15 @@
 .SearchAndCartContainer {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
   gap: 2rem;
   width: 100%;
 
   @media (min-width: 524px) {
-    flex-direction: row;
+    display: grid;
+    grid-template-areas: "search cart";
   }
+
   @media (min-width: 945px) {
     // width: 60%; // start position of search in header?
     width: 65%; // closer to left side logo
@@ -61,6 +62,8 @@
 }
 
 .cartBtn {
+  justify-self: end; // align to right side of header
+  grid-area: cart;
   display: flex;
   align-items: center;
   background-color: $orange;
